fix css modal cadModelo/feature css scrollbar

--- a/Admin/assets/css/style_fragrancia.css
+++ b/Admin/assets/css/style_fragrancia.css
@@ -1,5 +1,4 @@
 .content_modal #desc__Frag{
   min-height: 45%;
   max-height: 45%;
-  display: flex;
 }
